--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,4 +40,4 @@ jobs:
 
       - name: Don't kill instace
         if: ${{ failure() }}
-        run: sleep 1h # Prevent to killing instance after failure
+        run: pause # Prevent to killing instance after failure
